fix design layout problems

--- a/static/css/docs.css
+++ b/static/css/docs.css
@@ -97,25 +97,12 @@ hr.soften {
   font-weight: 300;
   text-align: center;
 }
-.game-list h2,
 .game-list h3 {
   font-weight: 300;
-}
-.game-list h2 {
-  font-size: 22px;
+  margin-bottom: 9px;
 }
 .game-list p {
-  margin-right: 10px;
-  margin-left: 20px;
-}
-.game-list .bs-icon {
-  float: left;
-  margin: 7px 10px 0 0;
-  opacity: .8;
-}
-.game-list .small-bs-icon {
-  float: left;
-  margin: 4px 5px 0 0;
+  margin-left: 15px;
 }
 .show-grid {
   margin-top: 10px;
@@ -135,6 +122,7 @@ hr.soften {
 }
 .rooms {
   margin: 20px;
+  overflow: hidden;
 }
 
 /** newgame **/
@@ -220,7 +208,9 @@ input[disabled].input-join {
   list-style: none;
   margin: 0;
 }
-
+.login-form {
+  clear: both;
+}
 
 /* Footer
 -------------------------------------------------- */
